vm-tests.yml: Restrict push trigger to master and devel branches
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/vm-tests.yml
+++ b/.github/workflows/vm-tests.yml
@@ -9,7 +9,8 @@ on:
         type: string
   push:
     branches:
-      - feature/cicd-integration-tests
+      - master
+      - devel
     tags:
       - v*
   pull_request:
