README.md: Add docker CI/CD tests badge
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/vm-tests.yml
+++ b/.github/workflows/vm-tests.yml
@@ -331,7 +331,7 @@ jobs:
   cleanup-snapshots:
     if: ${{ always() }}
     needs:
-      - cleanup
+      - create-postactivation-snapshots
     runs-on: ubuntu-latest
     container:
       image: thecalcaholic/ncp-test-automation:latest
