--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -117,7 +117,7 @@ jobs:
   release:
     needs:
       - test
-    if: ${{ github.event_name == 'push' && github.github.ref_type == 'tag' }}
+    if: ${{ github.event_name == 'push' && github.ref_type == 'tag' }}
     runs-on: ubuntu-latest
     steps:
       - name: Login to DockerHub
