--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -126,6 +126,9 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Create manifest and push as tag to docker hub
         run: |
           . ./build/buildlib.sh
