build-docker.yml: Push architecture specific images

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -137,6 +137,7 @@ jobs:
           do
             docker pull "thecalcaholic/ncp-internal-${arch}:${{ github.run_id }}"
             docker tag "thecalcaholic/ncp-internal-${arch}:${{ github.run_id }}" "ownyourbits/nextcloudpi-${arch}:${version?}"
+            docker push "ownyourbits/nextcloudpi-${arch}:${version?}"
           done
 
           docker manifest create ownyourbits/nextcloudpi:${version?} \
