build-lxd.yml: Add whywaita/setup-lxd step

--- a/.github/workflows/build-lxd.yml
+++ b/.github/workflows/build-lxd.yml
@@ -10,5 +10,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+      - uses: whywaita/setup-lxd@v1
+        with:
+          lxd_version: latest/stable
       - run: |
           ./build/build-LXD.sh
