--- a/.github/workflows/build-lxd.yml
+++ b/.github/workflows/build-lxd.yml
@@ -13,5 +13,34 @@ jobs:
       - uses: whywaita/setup-lxd@v1
         with:
           lxd_version: latest/stable
-      - run: |
+      - name: Build LXD Image
+        run: |
           ./build/build-LXD.sh
+      - name: Setup Firefox
+        uses: browser-actions/setup-firefox@latest
+      - name: Setup GeckoDriver
+        uses: browser-actions/setup-geckodriver@latest
+      - name: Setup Selenium
+        run: pip install selenium
+      - name: Test LXD Image
+        run: |
+          . ./build/buildlib.sh
+          lxc delete -f ncp
+          lxc launch "ncp/${version}" ncp
+          ip="$(lxc list -c n4 -f csv | grep '^ncp-test' | cut -d ',' -f2)"
+          ip="${ip/% *}"
+          python tests/activation_tests.py --no-gui "$ip" 443 4443 || {
+            tail -n 20 geckodriver.log > &2 || true
+            echo "Activation test failed!"
+            exit 1
+          }
+          python tests/system_tests.py --non-interactive || {
+            echo "System test failed!"
+            exit 1
+          }
+          python tests/nextcloud_tests.py --no-gui localhost 443 4443 || {
+            echo "Nextcloud test failed!"
+            exit 1
+          }
+          lxc stop ncp
+
