--- a/.github/workflows/build-lxd.yml
+++ b/.github/workflows/build-lxd.yml
@@ -29,8 +29,12 @@ jobs:
           lxc delete -f ncp
           systemd-run --user --scope -p "Delegate=yes" lxc launch "ncp/${version}" ncp
           lxc exec ncp -- bash -c 'while [ "$(systemctl is-system-running 2>/dev/null)" != "running" ] && [ "$(systemctl is-system-running 2>/dev/null)" != "degraded" ]; do :; done'
+          sleep 30
+          lxc network list
+          lxc network info lxdbr0
           lxc list -c n4 -f csv | grep '^ncp' | cut -d ',' -f2
           ip="$(lxc list -c n4 -f csv | grep '^ncp' | cut -d ',' -f2)"
+          ping -c 3 "$ip" || true
           echo "ip: $ip"
           ip="${ip/% *}"
           python activation_tests.py --no-gui "$ip" 443 4443 || {
