build-lxd.yml: Fix ssh key path

--- a/.github/workflows/build-lxd.yml
+++ b/.github/workflows/build-lxd.yml
@@ -73,10 +73,10 @@ jobs:
           echo "Setup ssh"
           mkdir -p ~/.ssh
           ssh-keygen -t ed25519 -f ".ssh/automation_ssh_key" -N ""
-          chmod 0600 ./.ssh/automation_ssh_key
+          chmod 0600 ~/.ssh/automation_ssh_key
           eval "$(ssh-agent)"
-          ssh-add ./.ssh/automation_ssh_key
-          hcloud ssh-key create --name "rpi-build-{{ $github.run_id }}"" --public-key-from-file "./.ssh/automation_ssh_key.pub"
+          ssh-add ~/.ssh/automation_ssh_key
+          hcloud ssh-key create --name "rpi-build-{{ $github.run_id }}"" --public-key-from-file "~/.ssh/automation_ssh_key.pub"
           hcloud server create --image debian-11 --name ncp-builder --type cx11 --ssh-key "rpi-build-{{ $github.run_id }}"
           for i in {1..5}
           do
