--- a/.github/workflows/build-lxd.yml
+++ b/.github/workflows/build-lxd.yml
@@ -72,7 +72,7 @@ jobs:
           set -e
           echo "Setup ssh"
           mkdir -p ~/.ssh
-          ssh-keygen -t ed25519 -f ".ssh/automation_ssh_key" -N ""
+          ssh-keygen -t ed25519 -f "~/.ssh/automation_ssh_key" -N ""
           chmod 0600 ~/.ssh/automation_ssh_key
           eval "$(ssh-agent)"
           ssh-add ~/.ssh/automation_ssh_key
