--- a/.github/workflows/build-lxd.yml
+++ b/.github/workflows/build-lxd.yml
@@ -76,7 +76,7 @@ jobs:
           chmod 0600 "$HOME/.ssh/automation_ssh_key"
           eval "$(ssh-agent)"
           ssh-add "$HOME/.ssh/automation_ssh_key"
-          hcloud ssh-key create --name "rpi-build-{{ $github.run_id }}"" --public-key-from-file "$HOME/.ssh/automation_ssh_key.pub"
+          hcloud ssh-key create --name "rpi-build-{{ $github.run_id }}" --public-key-from-file "$HOME/.ssh/automation_ssh_key.pub"
           hcloud server create --image debian-11 --name ncp-builder --type cx11 --ssh-key "rpi-build-{{ $github.run_id }}"
           for i in {1..5}
           do
