--- a/.github/workflows/build-lxd.yml
+++ b/.github/workflows/build-lxd.yml
@@ -76,12 +76,12 @@ jobs:
           chmod 0600 "$HOME/.ssh/automation_ssh_key"
           eval "$(ssh-agent)"
           ssh-add "$HOME/.ssh/automation_ssh_key"
-          hcloud ssh-key create --name "rpi-build-{{ env.UID}}" --public-key-from-file "$HOME/.ssh/automation_ssh_key.pub"
-          hcloud server create --image debian-11 --name "ncp-builder-{{ env.UID }}" --type cx11 --ssh-key "rpi-build-{{ env.UID }}"
+          hcloud ssh-key create --name "rpi-build-${{ env.UID}}" --public-key-from-file "$HOME/.ssh/automation_ssh_key.pub"
+          hcloud server create --image debian-11 --name "ncp-builder-${{ env.UID }}" --type cx11 --ssh-key "rpi-build-${{ env.UID }}"
           SSH_OPTIONS=(-o "StrictHostKeyChecking=no" -o "UserKnownHostsFile=/dev/null" -i "$HOME/.ssh/automation_ssh_key")
           for i in {1..5}
           do
-            ssh "root@$(hcloud server ip "ncp-builder-rpi-{{ env.UID }}")" "${SSH_OPTIONS[@]}" bash -c "echo Server is online" && break;
+            ssh "root@$(hcloud server ip "ncp-builder-rpi-${{ env.UID }}")" "${SSH_OPTIONS[@]}" bash -c "echo Server is online" && break;
             [[ $i -eq 5 ]] && {
               echo 'Failed to connect to hcloud server (timeout reached)!'
               exit 1
