Fix bash HEREDOC syntax

--- a/.github/workflows/build-lxd.yml
+++ b/.github/workflows/build-lxd.yml
@@ -89,7 +89,7 @@ jobs:
             }
             sleep 5
           done
-          "${ssh_cmd[@]}" bash -c <<EOF
+          "${ssh_cmd[@]}" bash <<EOF
           apt update && apt install -y git zip unzip parted binfmt-support qemu-user-static pbzip2
           git clone https://github.com/nextcloud/nextcloudpi.git
           cd nextcloudpi
