--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -29,7 +29,7 @@ jobs:
           name: ${{ github.run_id }}-lxd-image
           path: output
           if-no-files-found: error
-  text-lxd:
+  test-lxd:
     needs: 
       - build-lxd
     runs-on: ubuntu-latest
