--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -21,7 +21,7 @@ jobs:
           ./build/build-LXD.sh
           . ./build/buildlib.sh
           ARTIFACT_NAME="NextCloudPi_LXD_$( date  "+%m-%d-%y" ).tar.bz2"
-          lxc image export ncp/"${version}" "output/${ARTIFACT_NAME}"
+          lxc image export -q ncp/"${version}" "output/${ARTIFACT_NAME}"
           echo "::set-output name=artifact_name::${ARTIFACT_NAME}"
       - name: upload LXD image to artifact store
         uses: actions/upload-artifact@v3
@@ -54,9 +54,9 @@ jobs:
         working-directory: ./tests
         run: |
           . ../build/buildlib.sh
-          lxc delete -f ncp || true
-          lxc image import "output/${{ needs.build-lxd.outputs.artifact_name }}"
-          systemd-run --user --scope -p "Delegate=yes" lxc launch "ncp/${version}" ncp
+          lxc delete -q -f ncp || true
+          lxc image import -q "output/${{ needs.build-lxd.outputs.artifact_name }}"
+          systemd-run --user --scope -p "Delegate=yes" lxc launch -q "ncp/${version}" ncp
           lxc exec ncp -- bash -c 'while [ "$(systemctl is-system-running 2>/dev/null)" != "running" ] && [ "$(systemctl is-system-running 2>/dev/null)" != "degraded" ]; do :; done'
           sleep 30
           ip="$(lxc list -c n4 -f csv | grep '^ncp' | cut -d ',' -f2)"
