--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -53,10 +53,9 @@ jobs:
       - name: Test LXD Image
         working-directory: ./tests
         run: |
-          ls -l output/*
           . ../build/buildlib.sh
           lxc delete -q -f ncp || true
-          lxc image import -q "output/${{ needs.build-lxd.outputs.artifact_name }}"
+          lxc image import -q "../output/${{ needs.build-lxd.outputs.artifact_name }}"
           systemd-run --user --scope -p "Delegate=yes" lxc launch -q "ncp/${version}" ncp
           lxc exec ncp -- bash -c 'while [ "$(systemctl is-system-running 2>/dev/null)" != "running" ] && [ "$(systemctl is-system-running 2>/dev/null)" != "degraded" ]; do :; done'
           sleep 30
@@ -132,7 +131,7 @@ jobs:
           path: output
           if-no-files-found: error
   
-  cleanup:
+  cleanup-rpi:
     if: ${{ always() }}
     needs:
       - build-rpi
