--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -53,9 +53,12 @@ jobs:
       - name: Test LXD Image
         working-directory: ./tests
         run: |
+          set -x
+          pwd
+          ls - /home/runner/work/nextcloudpi/nextcloudpi/output
           . ../build/buildlib.sh
           lxc delete -q -f ncp || true
-          lxc image import -q "../output/${{ needs.build-lxd.outputs.artifact_name }}"
+          lxc image import -q "/home/runner/work/nextcloudpi/nextcloudpi/output/${{ needs.build-lxd.outputs.artifact_name }}"
           systemd-run --user --scope -p "Delegate=yes" lxc launch -q "ncp/${version}" ncp
           lxc exec ncp -- bash -c 'while [ "$(systemctl is-system-running 2>/dev/null)" != "running" ] && [ "$(systemctl is-system-running 2>/dev/null)" != "degraded" ]; do :; done'
           sleep 30
