build-images.yml: Disable fail-fast for armbian images

--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -168,6 +168,7 @@ jobs:
           - odroidhc4 OdroidHC4
           - odroidc4 OdroidC4
           - odroidc2 OdroidC2
+      fail-fast: false
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
