--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -91,6 +91,8 @@ jobs:
       artifact_name: ${{ steps.build-lxd.outputs.artifact_name }}
     steps:
       - uses: 3bit/setup-hcloud@v1
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Build RPI SD Image
